Website: Updated android manual for other languages than english.

--- a/index-de.html
+++ b/index-de.html
@@ -363,35 +363,15 @@
             <div class="text-container">
               <h3>Android</h3>
               <p>Wenn bereits eine andere Version von Valkyrie installiert ist, deinstalliere diese bitte zuerst.</p>
-              <p>Installiere die offizielle FFG-App über den Google Play Store:</p>
-              <p><b>Warnung: Derzeit wird Valkyrie nur von Android 10 oder niedriger unterstützt. Siehe <a
-                    href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">Problembehandlung</a>
-                  für Details.</b></p>
-              <p>Wenn Sie bereits eine Version von Valkyrie installiert haben, deinstallieren Sie diese bitte zuerst.
-              </p>
-              <p>Installieren Sie die offizielle App über den Google Play Store:</p>
-              <ul>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom"
-                    target="_blank">Villen des Wahnsinns (Zweite Edition)</a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl"
-                    target="_blank">Descent: Wege zum Ruhm</a></li>
-              </ul>
-              <p>1. Starte die offizielle App und warte, bis der Ladevorgang abgeschlossen ist (der Warte-Cursor im
-                Hauptmenü ist verschwunden).</p>
-              <p>2. Aktiviere "Unbekannte Quellen" unter Einstellungen → Sicherheit → Unbekannte Quellen. Kopiere die
-                Valkyrie APK-Datei auf dein Endgerät.</p>
-              <p>3. Führe die Installation der Valkyrie APK aus. Nach der Installation ist "Valkyrie" in Liste der Apps
-                zu finden. </p>
-              <p>4. Starte Valkyrie. Lasse alle Berechtigungen zu, die die App erfordert. Klicke in der Valkyrie-App auf
-                die Schaltfläche "Importieren". Der Import kann etwas länger dauern, bitte sei geduldig. Nach dem Import
-                können Sie den gewünschten Spieltyp ausführen.</p>
-
-              <p>Wenn ein schwarzer Bildschirm erscheint, gehe bitte zu den App-Einstellungen und überprüfe, ob der
-                Zugriff auf den Systemspeicher eingeschaltet ist.</p>
-
-              <p>Wenn der Import fehlschlägt, stellen sicher, dass genügend interner Speicherplatz zur Verfügung steht.
-                Jeder Spieltyp erfordert bis zu 300 MB. Um besonders sicher zu sein, sollte 1 GB freier Speicherplatz
-                vorhanden sein.</p>
+              <p></p>1. Aktivieren Sie "Unbekannte Quellen" unter Einstellungen → Sicherheit → Unbekannte Quellen.</p>
+              <p>2. Klicken Sie auf die Schaltfläche "Neuste Valkyrie Version herunterladen" unten, um die
+                Valkyrie-.apk-Datei auf Ihr Gerät herunterzuladen oder von einem anderen Gerät zu kopieren.</p>
+              <p>3. Führen Sie die Valkyrie-.apk-Datei aus, um Valkyrie zu installieren. Nachdem die Installation
+                abgeschlossen ist, finden Sie eine App namens "Valkyrie" in Ihrer App-Liste.</p>
+              <p>4. Starten Sie die App.</p>
+              <p>5. Erlauben Sie alle von der App angeforderten Berechtigungen.</p>
+              <p>6. Für alle weiteren Schritte, einschließlich des Datenimports aus den offiziellen Apps, lesen Sie
+                bitte das Android-Installationshandbuch.</p>
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Neuste Valkyrie
                 Version herunterladen</a>
             </div> <!-- end of text-container -->
@@ -467,8 +447,12 @@
           <div class="col-lg-12">
             <div class="text-container">
               <h3>iOS</h3>
-              <p>Während wir aufgrund von Apples erzwungenen App Store-Anforderungen keinen Client ausliefern, können Sie Valkyrie über <a href=„https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A“ target=„_blank“>Steam Link</a> von Ihrem Computer auf iOS streamen.</p>
-              <p>Installieren Sie Valkyrie und Steam auf ihrem PC. Starten Sie die Steam-Anwendung auf Ihrem Computer und die Steam-Link-App auf Ihrem IOS-Gerät. Starten Sie anschließend Valkyrie auf Ihrem Computer, um sie zu streamen.</p>
+              <p>Während wir aufgrund von Apples erzwungenen App Store-Anforderungen keinen Client ausliefern, können
+                Sie Valkyrie über <a href="https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A"
+                  target="_blank">Steam Link</a> von Ihrem Computer auf iOS streamen.</p>
+              <p>Installieren Sie Valkyrie und Steam auf ihrem PC. Starten Sie die Steam-Anwendung auf Ihrem Computer
+                und die Steam-Link-App auf Ihrem IOS-Gerät. Starten Sie anschließend Valkyrie auf Ihrem Computer, um sie
+                zu streamen.</p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
