--- a/index-pl.html
+++ b/index-pl.html
@@ -362,34 +362,18 @@
           <div class="col-lg-9">
             <div class="text-container">
               <h3>Android</h3>
-              <p><b>Ostrzeżenie: Obecnie Valkyrie jest obsługiwany tylko przez Android 10 lub niższe. Zobacz <a
-                    href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">troubleshooting</a>
-                  po szczegóły.</b></p>
-              <p>Jeśli posiadasz już zainstalowaną wcześniejsza wersję Valkyrie, najpierw ją odinstaluj.</p>
-              <p>Zainstaluj oficjalną aplikację ze sklepu Google Play:</p>
-              <ul>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom"
-                    target="_blank">Posiadłość Szaleństwa Druga Edycja</a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl"
-                    target="_blank">Descent: Droga do Legendy</a></li>
-              </ul>
-              <p>1. Uruchom oficjalną aplikację i poczekaj aż zakończy się ładowanie(poczekaj aż kursor w menu głównym
-                zniknie).</p>
-              <p>2. Włącz zezwolenie na instalowanie aplikacji z nieznanych źródeł w menu Ustawienia → Bezpieczeństwo →
-                Nieznane Źródła. Skopiuj plik Valkyrie APK na swoje urządzenie.</p>
-              <p>3. Uruchom Valkyrie APK i poczekaj aż się zainstaluje. Po zakończeniu instalacji znajdziesz aplikację o
-                nazwie Valkyrie na liście aplikacji. </p>
-              <p>4. Uruchom ją. Udziel zezwoleń wymaganych przez aplikację. Nacisnij przycik "Zaimportuj". Ten proces
-                może chwilę zająć. Gdy importowanie plików się zakończy możesz użyć wybranej gry.</p>
-
-              <p>Jeżeli ekran pozostaje czarny sprawdź w ustawieniach aplikacji czy została udzielona zgoda na dostęp do
-                plików.</p>
-
-              <p>Jeżeli import zakończy się niepowodzeniem, sprawdź czy posiadasz wystarczającą ilość wolnego miejsca we
-                wbudowanej pamięci. Każda z gier wymaga do 300 MB. Dla pewności warto mieć ok. 1GB wolnego miejsca.</p>
-
+              <p>If you already have a version of Valkyrie installed, please uninstall it first.</p>
+              <p>1. Enable "Unknown Sources" under Settings → Security → Unknown Sources.
+              <p>2. Click "Pobierz" button below to download the Valkyrie .apk file to your device or copy it
+                from another device.</p>
+              <p>3. Run the valkyrie .apk file to install Valkyrie. After the installation finished, you will find an
+                app named "Valkyrie" in your list of apps. </p>
+              <p>4. Run the app.
+              <p>5. Allow all permissions the app requests.</p>
+              <p>6. For all further steps including data import from the official apps please see <a
+                  href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Android installation
+                  manual.</a></p>
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Pobierz</a>
-
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
           <div class="col-lg-3">
