--- a/index-pt.html
+++ b/index-pt.html
@@ -362,35 +362,13 @@
           <div class="col-lg-9">
             <div class="text-container">
               <h3>Android</h3>
-              <p><b>Aviso: Actualmente a Valkyrie só é suportada pelo Android 10 ou inferior. Ver <a
-                    href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">troubleshooting</a>
-                  para detalhes.</b>
-                << /p>
-                  <p>Se você já tem uma versão do Valkyrie instalada, por favor desinstale primeiro.</p>
-                  <p>Instale o App Oficial usando a Google Play Store:</p>
-                  <ul>
-                    <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom"
-                        target="_blank">Mansions Of Madness Second Edition</a></li>
-                    <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl"
-                        target="_blank">Descent: Road to Legend</a></li>
-                  </ul>
-                  <p>1. Inicie o App Oficial e espere até que o carregamento esteja completo (o cursor dentro do menu
-                    principal ira desaparecer).</p>
-                  <p>2. Habilite "Unknown Sources" (Fontes desconhecidas) em Settings → Security → Unknown Sources
-                    (Configurações → Segurança → Fontes Desconhecidas). Copie o APK do Valkyrie para seu dispositivo.
-                  </p>
-                  <p>3. Rode o APK do Valkyrie para instalar. Após instalar você vai encontrar um App chamado "Valkyrie"
-                    entre seus aplicativos. </p>
-                  <p>4. Rode. Permita todas as permissões que o App peça. Aperte o botão "Import" dentro do App do
-                    Valkyrie. A importação pode levar um tempo. Depois da importação ser concluída você pode selecionar
-                    qual jogo quer usar.</p>
-
-                  <p>Se você ver apenas uma tela preta, vá até as configurações do aplicativo e verifique se as
-                    permissões de armazenamento estão habilitadas.</p>
-
-                  <p>Se a importação falhar, verifique se você tem espaço suficiente. Cada jogo precisa de até 300 MB.
-                    Para garantir, tenha 1 GB de espaço livre.</p>
-
+              <p>If you already have a version of Valkyrie installed, please uninstall it first.</p>
+              <p>1. Enable "Unknown Sources" under Settings → Security → Unknown Sources. 
+              <p>2. Click "Download Último" button below to download the Valkyrie .apk file to your device or copy it from another device.</p>
+              <p>3. Run the valkyrie .apk file to install Valkyrie. After the installation finished, you will find an app named "Valkyrie" in your list of apps. </p>
+              <p>4. Run the app.
+              <p>5. Allow all permissions the app requests.</p>
+              <p>6. For all further steps including data import from the official apps please see <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Android installation manual.</a></p>
                   <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download
                     Último</a>
 
