--- a/index-es.html
+++ b/index-es.html
@@ -359,32 +359,13 @@
           <div class="col-lg-9">
             <div class="text-container">
               <h3>Android</h3>
-              <p>Atención: Actualmente Valkyrie sólo es compatible con Android 10 o inferior. Consulta <a
-                  href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">solución
-                  de problemas</a> para más detalles.</b></p>
               <p>Si ya hay una versión de Valkyrie instalada, por favor desinstálala primero.</p>
-              <p>Instala la aplicación oficial usando Google Play Store:</p>
-              <ul>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom"
-                    target="_blank">Mansiones de la Locura Segunda Edición</a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl"
-                    target="_blank">Descent: Camino a la Leyenda</a></li>
-              </ul>
-
-              <p>1. Ejecuta la apliación oficial y espera hasta que se cargue por completo (hasta que el cursor de
-                espera del menú principal desparezca).</p>
-              <p>2. Habilita "Orígenes (o Fuentes) desconocidos" en la configuración Ajustes → Seguridad → Orígenes
-                desconcidos. Copia el archivo APK de Valkyrie en tu dispositivo.</p>
-              <p>3. Ejecuta el APK de Valkyrie para instalarla la aplicación. Tras la instalación, encontrarás una
-                aplicación llamada "Valkyrie" en tu lista de aplicaciones. </p>
-              <p>4. Ejecuta la aplicación. Habilita todos los permisos solicitados. Pulsa el botón "Importar" en la
-                aplicación de Valkyrie. La importación puede tardar un rato. Tras la importación podrás elegir el tipo
-                de juego a iniciar.</p>
-              <p>Si la pantalla se queda en negro, por favor, comprueba en los ajustes del dispositivo y asegúrate de
-                que están habilitados los permisos para almacenar datos.</p>
-              <p>Si la importación falla, asegúrate de que tienes suficiente espacio libre. Cada tipo de juego necesita
-                unos 300 MB. Es aconsejable tener al menos 1 GB de espacio libre para evitar problemas.</p>
-
+              <p>Habilite «Fuentes desconocidas» en Configuración → Seguridad → Fuentes desconocidas.</p>
+                <p>2. Haz clic en el botón «Download Latest» que aparece a continuación para descargar el archivo .apk de Valkyrie en tu dispositivo o copiarlo desde otro dispositivo.</p>
+                  <p>3. Ejecuta el archivo .apk de Valkyrie para instalar Valkyrie. Una vez finalizada la instalación, encontrarás una app llamada «Valkyrie» en tu lista de apps.</p>
+                    <p>4. Ejecuta la app.</p>
+                      <p>5. Permite todos los permisos que la app solicita.</p>
+                        <p>6. Para todos los demás pasos, incluida la importación de datos desde las aplicaciones oficiales, consulte el manual de instalación de Android.</p>
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
