--- a/index-it.html
+++ b/index-it.html
@@ -360,31 +360,13 @@
           <div class="col-lg-9">
             <div class="text-container">
               <h3>Android</h3>
-              <p><b>Attenzione: Attualmente Valkyrie è supportato solo da Android 10 o inferiore. Vedi <a
-                    href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">troubleshooting</a>
-                  per i dettagli.</b></p>
               <p>If you already have a version of Valkyrie installed, please uninstall it first.</p>
-              <p>Install the official app using the Google Play Store:</p>
-              <ul>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom"
-                    target="_blank">Mansions Of Madness Second Edition</a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl"
-                    target="_blank">Descent: Road to Legend</a></li>
-              </ul>
-              <p>1. Start the official app and wait until the loading is complete (the wait cursor inside the main menu
-                is gone).</p>
-              <p>2. Enable "Unknown Sources" under Settings → Security → Unknown Sources. Copy the Valkyrie APK file to
-                your device.</p>
-              <p>3. Run the valkyrie APK to install. After the install, you will find an app named "Valkyrie" in your
-                list of apps. </p>
-              <p>4. Run it. Allow all permissions the app requests. Press the "Import" button inside the Valkyrie app.
-                The import might take a while. After the import you are able to run the desired game type.</p>
-
-              <p>If you get a black screen, please go to app settings and check that storage permissions are on.</p>
-
-              <p>If the import fails, make sure you have enough internal storage space available. Each game type
-                requires up to 300 MB. To be extra sure, have 1 GB of free space available.</p>
-
+              <p>1. Enable "Unknown Sources" under Settings → Security → Unknown Sources. 
+              <p>2. Click "Download latest" button below to download the Valkyrie .apk file to your device or copy it from another device.</p>
+              <p>3. Run the valkyrie .apk file to install Valkyrie. After the installation finished, you will find an app named "Valkyrie" in your list of apps. </p>
+              <p>4. Run the app.
+              <p>5. Allow all permissions the app requests.</p>
+              <p>6. For all further steps including data import from the official apps please see <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Android installation manual.</a></p>
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
 
             </div> <!-- end of text-container -->
