Website: Added missing links to android manual

--- a/index-de.html
+++ b/index-de.html
@@ -371,7 +371,7 @@
               <p>4. Starten Sie die App.</p>
               <p>5. Erlauben Sie alle von der App angeforderten Berechtigungen.</p>
               <p>6. Für alle weiteren Schritte, einschließlich des Datenimports aus den offiziellen Apps, lesen Sie
-                bitte das Android-Installationshandbuch.</p>
+                bitte <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Android installation manual.</a></p>
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Neuste Valkyrie
                 Version herunterladen</a>
             </div> <!-- end of text-container -->
