--- a/index-es.html
+++ b/index-es.html
@@ -365,7 +365,7 @@
                   <p>3. Ejecuta el archivo .apk de Valkyrie para instalar Valkyrie. Una vez finalizada la instalación, encontrarás una app llamada «Valkyrie» en tu lista de apps.</p>
                     <p>4. Ejecuta la app.</p>
                       <p>5. Permite todos los permisos que la app solicita.</p>
-                        <p>6. Para todos los demás pasos, incluida la importación de datos desde las aplicaciones oficiales, consulte el manual de instalación de Android.</p>
+                        <p>6. Para todos los demás pasos, incluida la importación de datos desde las aplicaciones oficiales, consulte <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Android installation manual.</a>.</p>
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
