--- a/index.html
+++ b/index.html
@@ -363,9 +363,6 @@
           <div class="col-lg-9">
             <div class="text-container">
               <h3>Android</h3>
-              <p><b>Warning: Currently Valkyrie is only supported by Android 10 or lower. See <a
-                    href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">troubleshooting</a>
-                  for details.</b></p>
               <p>If you already have a version of Valkyrie installed, please uninstall it first.</p>
               <p>Install the official app using the Google Play Store:</p>
               <ul>
@@ -382,12 +379,7 @@
                 list of apps. </p>
               <p>4. Run it. Allow all permissions the app requests. Press the "Import" button inside the Valkyrie app.
                 The import might take a while. After the import you are able to run the desired game type.</p>
-
-              <p>If you get a black screen, please go to app settings and check that storage permissions are on.</p>
-
-              <p>If the import fails, make sure you have enough internal storage space available. Each game type
-                requires up to 300 MB. To be extra sure, have 1 GB of free space available.</p>
-
+              <p>5. Next check the <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Android installation manual</a>.</p>
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
 
             </div> <!-- end of text-container -->
@@ -456,40 +448,6 @@
       </div> <!-- end of container -->
     </div> <!-- end of basic-3 -->
     <!-- end of details 2 -->
-
-    <!-- FireOS -->
-    <div id="download-fireos" class="basic-2">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <img class="img-fluid" src="web/images/fire-logo.png" alt="alternative">
-          </div> <!-- end of col -->
-          <div class="col-lg-9">
-            <div class="text-container">
-              <h3>Fire OS</h3>
-              <p>Use the Android version of Valkyrie, it will also work on Fire OS.</p>
-              <p>You have to download and install the official OBB file manually (You can get it <a
-                  href="https://apkplz.net" target="_blank">here</a>)</p>
-              <p>Copy the file to &lt;storage&gt;/Android/obb/&lt;game&gt; (If the path doesn't exist, create it)</p>
-              <p>1. &lt; storage &gt; should be the &quot;Internal Storage&quot;. /storage/emulated/0 in most of the
-                cases.</p>
-              <p>2. &lt; game &gt; must be either:</p>
-              <p><b>Mansions of Madness:</b> com.fantasyflightgames.mom/ main.906.com.fantasyflightgames.mom.obb</p>
-              <p><b>Road to Legend</b>: com.fantasyflightgames.rtl/ main.459.com.fantasyflightgames.rtl.obb</p>
-
-              <p>Enable "Unknown Sources" under Settings → Security → Unknown Sources. Copy the valkyrie APK file to
-                your device. Run the valkyrie APK to install. After the install, you will find an app named "Valkyrie"
-                in your list of apps. Run it. Allow all permissions the app requests. Press the "Import" button inside
-                the Valkyrie app. The import might take a while. After the import you are able to run the desired game
-                type.</p>
-              <a id="valkyrieAndroid2" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
-
-            </div> <!-- end of text-container -->
-          </div> <!-- end of col -->
-        </div> <!-- end of row -->
-      </div> <!-- end of container -->
-    </div> <!-- end of basic-2 -->
-
     <!-- iOS -->
     <div id="download-ios" class="basic-3">
       <div class="container">
@@ -498,18 +456,9 @@
             <div class="text-container">
               <h3>iOS</h3>
               <p>While we don't ship a client due to Apples forced App Store requirements, you can stream Valkyrie to
-                iOS from your Windows PC using <a href="http://kinoconsole.kinoni.com/" target="_blank">KinoConsole</a>.
+                iOS from your Windows PC using <a href="https://play.google.com/store/apps/details?id=com.valvesoftware.steamlink" target="_blank">Steam Link</a>.
               </p>
-              <p>Just install Valkyrie and <a href="http://kinoconsole.kinoni.com/#server" target="_blank">KinoConsole
-                  Server</a> on your PC (restart your PC as required). Start the new, installed "Kinoni Streamer"
-                application. Go to "Quick Launch", "Browse..." and add the Valkyrie.exe (usually found under C:\Program
-                Files (x86)\Valkyrie\Valkyrie.exe).</p>
-              <p>Install the App<a href="https://itunes.apple.com/app/kinoconsole-stream-pc-games/id965075144"
-                  target="_blank"> KinoConsole</a> from the App Store. If your iOS device and the PC are in the same
-                WLAN, it should automatically detect the server and you will find "Valkyrie" in the list of launchable
-                Apps. See also: Official Setup Guide.</p>
-              <p>Older iOS versions (< iOS 10) don't support <a href="http://kinoconsole.kinoni.com/" target="_blank">
-                  KinoKonsole</a>. You can try to use Splashtop Personal on those.</p>
+              <p>For more information check the <a href="https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A">Steam Link app manual</a></p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
