Updated website ios manual for other languages.

--- a/index-de.html
+++ b/index-de.html
@@ -504,19 +504,10 @@
           <div class="col-lg-12">
             <div class="text-container">
               <h3>iOS</h3>
-              <p>Aufgrund der von Apple erhobenen App Store Anforderungen kann keine Apple Version angeboten werden.
-                Dennoch kann Valkyrie über KinoConsole von einem Windows-PC aus auf iOS gestreamt werden. <a
-                  href="http://kinoconsole.kinoni.com/" target="_blank">KinoConsole</a>.</p>
-              <p>Installiere Valkyrie und <a href="http://kinoconsole.kinoni.com/#server" target="_blank">KinoConsole
-                  Server</a> auf dem PC (starte den PC bei Bedarf neu). Starte die neu installierte Anwendung "Kinoni
-                Streamer". Gehe auf "Schnellstart", "Durchsuchen..." und füge die Valkyrie.exe hinzu (normalerweise
-                unter C:\Programmdateien (x86)\Valkyrie\Valkyrie.exe zu finden).</p>
-              <p>Installiere die App <a href="https://itunes.apple.com/app/kinoconsole-stream-pc-games/id965075144"
-                  target="_blank"> KinoConsole</a> aus dem App Store. Wenn sich das iOS-Gerät und der PC im selben WLAN
-                befinden, sollte der Server automatisch erkannt werden und "Valkyrie" ist in der Liste der startbaren
-                Apps zu finden. Siehe auch: Offizielle Setup-Anleitung.</p>
-              <p>Ältere iOS-Versionen (< iOS 10) unterstützen KinoKonsole nicht. Splashtop Personal könnte auf diesen
-                  eine Alternative bieten.</p>
+ <p>Während wir aufgrund von Apples erzwungenen App-Store-Anforderungen keinen Client ausliefern, kannst du Valkyrie mit <a href="https://play.google.com/store/apps/details?id=com.valvesoftware.steamlink" target="_blank">Steam Link</a> von deinem Windows-PC auf
+ iOS streamen.
+              </p>
+ <p>Weitere Informationen findest du in der <a href="https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A">Steam Link App Anleitung</a></p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
