--- a/index-pl.html
+++ b/index-pl.html
@@ -494,25 +494,16 @@
     </div> <!-- end of basic-2 -->
 
     <!-- iOS -->
-    <div id="download-ios" class="basic-3">
+<div id="download-ios" class="basic-3">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <div class="text-container">
-              <h3>iOS</h3>
-              <p>Pomimo tego, że ze względu na wymagania App Store, nie udostępniamy Valkyrie na urządzenia z iOS,
-                możesz jednak streamować ją ze swojego PC-ta z Windowsem przy pomocy <a
-                  href="http://kinoconsole.kinoni.com/" target="_blank">KinoConsole</a>.</p>
-              <p>Zainstaluj Valkyrie oraz <a href="http://kinoconsole.kinoni.com/#server" target="_blank">KinoConsole
-                  Server</a> na swoim komputerze (wymagane jest ponowne uruchomienie komputera). Uruchom aplikację
-                "Kinoni Streamer". Wybierz "Quick Launch", "Browse..." i wybierz Valkyrie.exe (domyślnie znajduje się w
-                C:\Program Files (x86)\Valkyrie\Valkyrie.exe).</p>
-              <p>Zainstaluj aplikację<a href="https://itunes.apple.com/app/kinoconsole-stream-pc-games/id965075144"
-                  target="_blank"> KinoConsole</a> z App Store. Jeśli twoje urządzenie z iOS oraz PC są w tej samej
-                sieci, serwer powinien zostać wykryty automatycznie i "Valkyrie" powinno wyświetlić się na liście
-                aplikacji możliwych do włączenia. Sprawdź też: Official Setup Guide.</p>
-              <p>Starsze wersje iOS (< iOS 10) Nie wspierają <a href="http://kinoconsole.kinoni.com/" target="_blank">
-                  KinoKonsole</a>. Możesz spróbować użyć na nich Splashtop Personal.</p>
+               <h3>iOS</h3>
+ <p>Chociaż nie dostarczamy klienta ze względu na wymagania App Store, możesz streamować Valkyrie na
+ iOS z komputera z systemem Windows za pomocą <a href="https://play.google.com/store/apps/details?id=com.valvesoftware.steamlink" target="_blank">Steam Link</a>.
+              </p>
+ <p>Aby uzyskać więcej informacji, sprawdź <a href="https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A">Instrukcję obsługi aplikacji Steam Link</a></p>.
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
