--- a/index-pt.html
+++ b/index-pt.html
@@ -497,34 +497,22 @@
     </div> <!-- end of basic-2 -->
 
     <!-- iOS -->
-    <div id="download-ios" class="basic-3">
+<div id="download-ios" class="basic-3">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <div class="text-container">
               <h3>iOS</h3>
-              <p>Por enquanto nós não temos uma versão para iOS devido a algumas políticas da App Store, mas você pode
-                fazer um stream do Valkyrie para o iOS a partir do seu PC Windows usando <a
-                  href="http://kinoconsole.kinoni.com/" target="_blank">KinoConsole</a>.</p>
-              <p>Instale o Valkyrie e oo <a href="http://kinoconsole.kinoni.com/#server" target="_blank">KinoConsole
-                  Server</a> no seu PC (reinicie conforme pedido). Inicie o recém instalado "Kinoni Streamer". Vá até
-                "Quick Launch", "Browse..." e adicione o Valkyrie.exe (geralmente encontrado em C:\Program Files
-                (x86)\Valkyrie\Valkyrie.exe).</p>
-              <p>Instale o App<a href="https://itunes.apple.com/app/kinoconsole-stream-pc-games/id965075144"
-                  target="_blank"> KinoConsole</a> na App Store. Se o seu dispostivo iOS device e PC estiverem na mesma
-                WLAN, ele deve automaticamente identificar o servidor e você encontrará "Valkyrie" na lista de App. Veja
-                também: <a href="http://kinoconsole.kinoni.com/iossetup.html" target="_blank">Official Setup Guide.</a>
+ <p>Embora não enviemos um cliente devido aos requisitos forçados da App Store da Apple, podes transmitir o Valkyrie para
+ iOS a partir do teu PC Windows usando <a href="https://play.google.com/store/apps/details?id=com.valvesoftware.steamlink" target="_blank">Steam Link</a>.
               </p>
-              <p>Versões mais antigas de iOS (< iOS 10) não tem suporte ao <a href="http://kinoconsole.kinoni.com/"
-                  target="_blank">KinoKonsole</a>. Você pode tentar usar o <a href="https://www.splashtop.com/personal"
-                    target="_blank">Splashtop Personal</a>.</p>
+ <p>Para mais informações, consulta o <a href="https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A">Manual da aplicação Steam Link</a></p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
       </div> <!-- end of container -->
     </div> <!-- end of basic-3 -->
     <!-- end of details 2 -->
-
 
 
   </div>
