--- a/index-es.html
+++ b/index-es.html
@@ -490,32 +490,22 @@
     </div> <!-- end of basic-2 -->
 
     <!-- iOS -->
-    <div id="download-ios" class="basic-3">
+<div id="download-ios" class="basic-3">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <div class="text-container">
               <h3>iOS</h3>
-              <p>While we don't ship a client due to Apples forced App Store requirements, you can stream Valkyrie to
-                iOS from your Windows PC using <a href="http://kinoconsole.kinoni.com/" target="_blank">KinoConsole</a>.
+ <p>Aunque no enviamos un cliente debido a los requisitos forzosos de la App Store de Apple, puedes transmitir Valkyrie a
+ iOS desde tu PC con Windows usando <a href="https://play.google.com/store/apps/details?id=com.valvesoftware.steamlink" target="_blank">Steam Link</a>.
               </p>
-              <p>Just install Valkyrie and <a href="http://kinoconsole.kinoni.com/#server" target="_blank">KinoConsole
-                  Server</a> on your PC (restart your PC as required). Start the new, installed "Kinoni Streamer"
-                application. Go to "Quick Launch", "Browse..." and add the Valkyrie.exe (usually found under C:\Program
-                Files (x86)\Valkyrie\Valkyrie.exe).</p>
-              <p>Install the App<a href="https://itunes.apple.com/app/kinoconsole-stream-pc-games/id965075144"
-                  target="_blank"> KinoConsole</a> from the App Store. If your iOS device and the PC are in the same
-                WLAN, it should automatically detect the server and you will find "Valkyrie" in the list of launchable
-                Apps. See also: Official Setup Guide.</p>
-              <p>Older iOS versions (< iOS 10) don't support <a href="http://kinoconsole.kinoni.com/" target="_blank">
-                  KinoKonsole</a>. You can try to use Splashtop Personal on those.</p>
+ <p>Para más información, consulta el <a href="https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A">Manual de la aplicación Steam Link</a></p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
       </div> <!-- end of container -->
     </div> <!-- end of basic-3 -->
     <!-- end of details 2 -->
-
 
 
   </div>
