Updated website android manual for all languages except english.

--- a/index-de.html
+++ b/index-de.html
@@ -389,12 +389,7 @@
                 die Schaltfläche "Importieren". Der Import kann etwas länger dauern, bitte sei geduldig. Nach dem Import
                 kannst du den gewünschten Spieltyp ausführen.</p>
 
-              <p>Wenn ein schwarzer Bildschirm erscheint, gehe bitte zu den App-Einstellungen und überprüfe, ob der
-                Zugriff auf den Systemspeicher eingeschaltet ist.</p>
-
-              <p>Wenn der Import fehlschlägt, stellen sicher, dass genügend interner Speicherplatz zur Verfügung steht.
-                Jeder Spieltyp erfordert bis zu 300 MB. Um besonders sicher zu sein, sollte 1 GB freier Speicherplatz
-                vorhanden sein.</p>
+              <p>5. Als Nächstes lesen Sie das <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Android-Installationshandbuch</a>.</p>
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Neuste Valkyrie
                 Version herunterladen</a>
             </div> <!-- end of text-container -->
