--- a/index-es.html
+++ b/index-es.html
@@ -382,10 +382,7 @@
               <p>4. Ejecuta la aplicación. Habilita todos los permisos solicitados. Pulsa el botón "Importar" en la
                 aplicación de Valkyrie. La importación puede tardar un rato. Tras la importación podrás elegir el tipo
                 de juego a iniciar.</p>
-              <p>Si la pantalla se queda en negro, por favor, comprueba en los ajustes del dispositivo y asegúrate de
-                que están habilitados los permisos para almacenar datos.</p>
-              <p>Si la importación falla, asegúrate de que tienes suficiente espacio libre. Cada tipo de juego necesita
-                unos 300 MB. Es aconsejable tener al menos 1 GB de espacio libre para evitar problemas.</p>
+              <p>5. A continuación revisa el <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Manual de instalación de Android</a>.</p>
 
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
             </div> <!-- end of text-container -->
