--- a/index-it.html
+++ b/index-it.html
@@ -382,10 +382,7 @@
               <p>4. Run it. Allow all permissions the app requests. Press the "Import" button inside the Valkyrie app.
                 The import might take a while. After the import you are able to run the desired game type.</p>
 
-              <p>If you get a black screen, please go to app settings and check that storage permissions are on.</p>
-
-              <p>If the import fails, make sure you have enough internal storage space available. Each game type
-                requires up to 300 MB. To be extra sure, have 1 GB of free space available.</p>
+             <p>5. Quindi controllare il <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">manuale di installazione di Android</a>.</p>
 
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
 
