--- a/index-pl.html
+++ b/index-pl.html
@@ -384,11 +384,7 @@
               <p>4. Uruchom ją. Udziel zezwoleń wymaganych przez aplikację. Nacisnij przycik "Zaimportuj". Ten proces
                 może chwilę zająć. Gdy importowanie plików się zakończy możesz użyć wybranej gry.</p>
 
-              <p>Jeżeli ekran pozostaje czarny sprawdź w ustawieniach aplikacji czy została udzielona zgoda na dostęp do
-                plików.</p>
-
-              <p>Jeżeli import zakończy się niepowodzeniem, sprawdź czy posiadasz wystarczającą ilość wolnego miejsca we
-                wbudowanej pamięci. Każda z gier wymaga do 300 MB. Dla pewności warto mieć ok. 1GB wolnego miejsca.</p>
+              <p>5. Następnie sprawdź <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">instrukcję instalacji Androida</a>.</p>
 
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Pobierz</a>
 
