--- a/index-pt.html
+++ b/index-pt.html
@@ -387,12 +387,7 @@
                     Valkyrie. A importação pode levar um tempo. Depois da importação ser concluída você pode selecionar
                     qual jogo quer usar.</p>
 
-                  <p>Se você ver apenas uma tela preta, vá até as configurações do aplicativo e verifique se as
-                    permissões de armazenamento estão habilitadas.</p>
-
-                  <p>Se a importação falhar, verifique se você tem espaço suficiente. Cada jogo precisa de até 300 MB.
-                    Para garantir, tenha 1 GB de espaço livre.</p>
-
+                  <p>5. Em seguida, verifique o <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Manual de instalação do Android</a>.</p>
                   <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download
                     Último</a>
 
