Fixed incorrect step in website android manual.

--- a/index-de.html
+++ b/index-de.html
@@ -385,9 +385,7 @@
                 Valkyrie APK-Datei auf dein Endgerät.</p>
               <p>3. Führe die Installation der Valkyrie APK aus. Nach der Installation ist "Valkyrie" in Liste der Apps
                 zu finden. </p>
-              <p>4. Starte Valkyrie. Lasse alle Berechtigungen zu, die die App erfordert. Klicke in der Valkyrie-App auf
-                die Schaltfläche "Importieren". Der Import kann etwas länger dauern, bitte sei geduldig. Nach dem Import
-                kannst du den gewünschten Spieltyp ausführen.</p>
+              <p>4. Starte Valkyrie. Lasse alle Berechtigungen zu, die die App erfordert.</p>
 
               <p>5. Als Nächstes lesen Sie das <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Android-Installationshandbuch</a>.</p>
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Neuste Valkyrie
