--- a/index-es.html
+++ b/index-es.html
@@ -379,9 +379,7 @@
                 desconcidos. Copia el archivo APK de Valkyrie en tu dispositivo.</p>
               <p>3. Ejecuta el APK de Valkyrie para instalarla la aplicación. Tras la instalación, encontrarás una
                 aplicación llamada "Valkyrie" en tu lista de aplicaciones. </p>
-              <p>4. Ejecuta la aplicación. Habilita todos los permisos solicitados. Pulsa el botón "Importar" en la
-                aplicación de Valkyrie. La importación puede tardar un rato. Tras la importación podrás elegir el tipo
-                de juego a iniciar.</p>
+              <p>4. Ejecuta la aplicación. Habilita todos los permisos solicitados.</p>
               <p>5. A continuación revisa el <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Manual de instalación de Android</a>.</p>
 
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
