--- a/index-it.html
+++ b/index-it.html
@@ -365,22 +365,21 @@
               <p><b>Attenzione: Attualmente Valkyrie è supportato solo da Android 10 o inferiore. Vedi <a
                     href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">troubleshooting</a>
                   per i dettagli.</b></p>
-              <p>If you already have a version of Valkyrie installed, please uninstall it first.</p>
-              <p>Install the official app using the Google Play Store:</p>
-              <ul>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom"
-                    target="_blank">Mansions Of Madness Second Edition</a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl"
-                    target="_blank">Descent: Road to Legend</a></li>
-              </ul>
-              <p>1. Start the official app and wait until the loading is complete (the wait cursor inside the main menu
-                is gone).</p>
-              <p>2. Enable "Unknown Sources" under Settings → Security → Unknown Sources. Copy the Valkyrie APK file to
-                your device.</p>
-              <p>3. Run the valkyrie APK to install. After the install, you will find an app named "Valkyrie" in your
-                list of apps. </p>
-              <p>4. Run it. Allow all permissions the app requests. Press the "Import" button inside the Valkyrie app.
-                The import might take a while. After the import you are able to run the desired game type.</p>
+              <p>Se avete già installato una versione di Valkyrie, disinstallatela prima.</p>
+ <p>Installate l'app ufficiale utilizzando il Google Play Store:</p>
+ <ul>
+ <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom"
+ target="_blank">Mansions Of Madness Second Edition</a></li>
+ <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl"
+ target="_blank">Descent: Road to Legend</a></li>
+ </ul>
+ <p>1. Avviare l'app ufficiale e attendere il completamento del caricamento (il cursore di attesa all'interno del menu principale
+ è scomparso).</p>
+ <p>2. Abilitare "Sorgenti sconosciute" in Impostazioni → Sicurezza → Sorgenti sconosciute. Copiare il file APK di Valkyrie all'indirizzo
+ del dispositivo.</p>
+ <p>3. Eseguire l'APK di Valkyrie per installarlo. Dopo l'installazione, si troverà un'app denominata "Valkyrie" nell'elenco delle applicazioni di
+. </p>
+ <p>4. Eseguirla. Consentire tutte le autorizzazioni richieste dall'applicazione.</p>
 
              <p>5. Quindi controllare il <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">manuale di installazione di Android</a>.</p>
 
