--- a/index-pl.html
+++ b/index-pl.html
@@ -381,8 +381,7 @@
                 Nieznane Źródła. Skopiuj plik Valkyrie APK na swoje urządzenie.</p>
               <p>3. Uruchom Valkyrie APK i poczekaj aż się zainstaluje. Po zakończeniu instalacji znajdziesz aplikację o
                 nazwie Valkyrie na liście aplikacji. </p>
-              <p>4. Uruchom ją. Udziel zezwoleń wymaganych przez aplikację. Nacisnij przycik "Zaimportuj". Ten proces
-                może chwilę zająć. Gdy importowanie plików się zakończy możesz użyć wybranej gry.</p>
+              <p>4. Uruchom ją. Udziel zezwoleń wymaganych przez aplikację.</p>
 
               <p>5. Następnie sprawdź <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">instrukcję instalacji Androida</a>.</p>
 
