--- a/index-pt.html
+++ b/index-pt.html
@@ -383,9 +383,7 @@
                   </p>
                   <p>3. Rode o APK do Valkyrie para instalar. Após instalar você vai encontrar um App chamado "Valkyrie"
                     entre seus aplicativos. </p>
-                  <p>4. Rode. Permita todas as permissões que o App peça. Aperte o botão "Import" dentro do App do
-                    Valkyrie. A importação pode levar um tempo. Depois da importação ser concluída você pode selecionar
-                    qual jogo quer usar.</p>
+                  <p>4. Rode. Permita todas as permissões que o App peça.</p>
 
                   <p>5. Em seguida, verifique o <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Manual de instalação do Android</a>.</p>
                   <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download
