--- a/index-fr.html
+++ b/index-fr.html
@@ -379,8 +379,7 @@
                 your device.</p>
               <p>3. Run the valkyrie APK to install. After the install, you will find an app named "Valkyrie" in your
                 list of apps. </p>
-              <p>4. Run it. Allow all permissions the app requests. Press the "Import" button inside the Valkyrie app.
-                The import might take a while. After the import you are able to run the desired game type.</p>
+              <p>4. Run it. Allow all permissions the app requests.</p>
 
              <p>5. Vérifiez ensuite le <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">manuel d'installation d'Android</a>.</p>
 
